<resources>
    <string name="app_name">Chef Buddy</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n \n \nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n \n \nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n \n \nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n\n\nEND END END.</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n \n \nEND END END</string>
    <string name="backup_info_detail_string">%1$s backup</string>
    <string name="backup_info_detail_string_2">Done %1$s</string>
    <string name="backup_info_detail_string_3">%1$d recipes, %2$d images</string>
    <string name="activity_about_toolbar_title">About</string>
    <string name="activity_about_version">Version %1$s</string>
    <string name="activity_about_author" translatable="false">Alejandro Bicelis %1$d</string>
    <string name="activity_about_market_link">Rate app</string>
    <string name="activity_about_github_link">View GitHub Project</string>
    <string name="activity_about_website_link" translatable="false">www.alejandrobicelis.com.ve</string>
    <string name="url_market" translatable="false">market://details?id=ve.com.abicelis.chefbuddy</string>
    <string name="url_github" translatable="false">github.com/abicelis/</string>
    <string name="url_website" translatable="false">www.alejandrobicelis.com.ve</string>
    <string name="address_email" translatable="false">alejandro@alejandrobicelis.com.ve</string>
    <string name="activity_home_tab_recipe_title">Recipes</string>
    <string name="activity_home_tab_spin_wheel_title">Spin wheel</string>
    <string name="activity_home_tab_history_title">History</string>
    <string name="activity_home_menu_search">Search</string>
    <string name="activity_home_menu_settings">Settings</string>
    <string name="activity_home_menu_about">About</string>
    <string name="activity_home_searchable_hint">Search&#8230;</string>
    <string name="fragment_recipe_list_no_items">There are no recipes. Add one using the + button</string>
    <string name="fragment_spinwheel_notice_card_title">Spin the wheel for a random Recipe</string>
    <string name="fragment_spinwheel_notice_card_subtitle">Set the recipes on the wheel by clicking the top-right edit button</string>
    <string name="fragment_spinwheel_no_items">Not enough recipes to show spin wheel. Need at least %1$d</string>
        <string name="dialog_edit_spin_wheel_recipes_title">SET WHEEL RECIPES</string>
        <string name="dialog_edit_spin_wheel_recipes_subtitle">Select at least %1$d recipes and at most %2$d</string>
    <string name="fragment_history_no_daily_recipe_title">No recipe logged</string>
    <string name="fragment_history_no_daily_recipe_subtitle">Click the edit button to set a recipe for this day</string>
    <string name="fragment_history_no_items">This page is under construction!</string>
        <string name="dialog_edit_daily_recipe_title">SET RECIPE FOR DATE</string>
        <string name="dialog_edit_daily_recipe_none">NONE</string>
    <string name="activity_recipe_detail_download">Download</string>
    <string name="activity_recipe_detail_edit">Edit</string>
    <string name="activity_recipe_detail_delete">Delete</string>
    <string name="activity_recipe_detail_share">Share</string>
    <string name="activity_recipe_detail_title_detail_format">%1$s | %2$s preparation</string>
    <string name="activity_recipe_detail_title_ingredients">INGREDIENTS</string>
    <string name="activity_recipe_detail_title_preparation">PREPARATION</string>
    <string name="activity_recipe_detail_title_images">IMAGES</string>
    <string name="activity_recipe_detail_no_images">No images here</string>
    <string name="activity_recipe_detail_no_ingredients">No ingredients here</string>
    <string name="activity_recipe_detail_share_recipe_title">Share Recipe</string>
    <string name="activity_recipe_detail_success_deleting_recipe">Recipe deleted successfully</string>
    <string name="activity_recipe_detail_success_downloading_recipe">Recipe downloaded successfully</string>
        <string name="dialog_recipe_detail_delete_title">Delete recipe</string>
        <string name="dialog_recipe_detail_delete_message">Are you sure you want to delete \'%1$s\'?</string>
    <string name="activity_add_edit_recipe_title_add">Add recipe</string>
    <string name="activity_add_edit_recipe_title_edit">Edit recipe</string>
    <string name="activity_add_edit_recipe_menu_save">Save</string>
    <string name="activity_add_edit_recipe_title_basic">BASIC</string>
    <string name="activity_add_edit_recipe_title_ingredients">INGREDIENTS</string>
    <string name="activity_add_edit_recipe_title_preparation">PREPARATION</string>
    <string name="activity_add_edit_recipe_title_images">IMAGES</string>
    <string name="activity_add_edit_recipe_ingredient_button_add">Add</string>
    <string name="activity_add_edit_recipe_image_button_add">Add</string>
    <string name="activity_add_edit_recipe_hint_name">Recipe name&#8230;</string>
    <string name="activity_add_edit_recipe_hint_preparation">Preparation&#8230;</string>
    <string name="activity_add_edit_recipe_success_saving_recipe">Recipe saved successfully</string>
        <string name="dialog_add_edit_recipe_discard_title">Discard changes</string>
        <string name="dialog_add_edit_recipe_discard_message">Are you sure you want to discard your changes?</string>
        <string name="dialog_add_recipe_ingredient_title">ADD INGREDIENT</string>
        <string name="dialog_add_recipe_ingredient_amount_hint">Amount&#8230;</string>
        <string name="dialog_add_recipe_ingredient_ingredient_hint">Ingredient&#8230;</string>
        <string name="dialog_add_edit_recipe_delete_image_title">Delete Image</string>
        <string name="dialog_add_edit_recipe_delete_image_message">Are you sure you want to delete this image?</string>
        <string name="dialog_add_edit_recipe_delete_ingredient_title">Delete Ingredient</string>
        <string name="dialog_add_edit_recipe_delete_ingredient_message">Are you sure you want to delete this ingredient?</string>
    <string name="activity_edit_image_success_saving_image">Image saved successfully</string>
        <string name="dialog_select_image_source_title">IMAGE SOURCE</string>
        <string name="dialog_select_image_source_camera">Camera</string>
        <string name="dialog_select_image_source_gallery">Gallery</string>
    <string name="activity_search_online_recipe_invalid_query">Please enter a recipe search keyword</string>
    <string name="activity_search_online_recipe_menu_search">Search</string>
    <string name="activity_search_online_recipe_menu_source">Source</string>
    <string name="activity_search_online_recipe_api_changed">Recipe search changed to %1$s</string>
    <string name="activity_search_online_recipe_api_name_edamam">Edamam</string>
    <string name="activity_search_online_recipe_api_name_food_2_fork">Food2Fork</string>
        <string name="dialog_select_recipe_source_title">ADD A RECIPE</string>
        <string name="dialog_select_recipe_source_manual">Enter manually</string>
        <string name="dialog_select_recipe_source_online">Find online</string>
    <string name="activity_settings_toolbar_title">Settings</string>
    <string name="settings_category_settings_title">App settings</string>
    <string name="settings_backup_key" translatable="false">settings_backup</string>
    <string name="settings_backup_title">Backup</string>
    <string name="settings_backup_summary">Configure app data backup options</string>
    <string name="settings_category_about_title">About</string>
    <string name="settings_about_key" translatable="false">settings_about</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_summary">Check app version, developer info&#8230;</string>
    <string name="settings_rate_key" translatable="false">settings_rate</string>
    <string name="settings_rate_title">Rate Chef Buddy</string>
    <string name="settings_rate_summary">Like this app? A 5-star rating is gladly appreciated</string>
    <string name="settings_contact_key" translatable="false">settings_contact</string>
    <string name="settings_contact_title">Contact developer</string>
    <string name="settings_contact_summary">Having trouble using this app? Questions? Email me at alejandro@alejandrobicelis.com.ve</string>
    <string name="activity_backup_toolbar_title">Backup</string>
    <string name="activity_backup_menu_backup">BACKUP NOW</string>
    <string name="activity_backup_title_last_backup">LAST BACKUP</string>
    <string name="activity_backup_title_general">GENERAL</string>
    <string name="activity_backup_title_google_drive">GOOGLE DRIVE</string>
    <string name="activity_backup_backup_frequency_title">Backup Frequency</string>
    <string name="activity_backup_account_title">Account</string>
    <string name="activity_backup_backup_over_title">Back up over</string>
    <string name="activity_backup_no_backups_found">No backups found</string>
    <string name="activity_backup_backing_up">Backing up&#8230;</string>
    <string name="activity_backup_google_drive_disabled">Disabled</string>
    <string name="activity_backup_restore_data_explanation">Note: You can restore your data when you reinstall Chef Buddy. Chef Buddy will try to find a Local/Google Drive backup and restore the newest one</string>
        <string name="dialog_grant_storage_permissions_title">Grant storage permission</string>
        <string name="dialog_grant_storage_permissions_message">Chef Buddy needs storage permissions to create and restore backups</string>
        <string name="dialog_set_backup_frequency_title">Set a backup frequency</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_set">SET</string>
</resources>