<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="24dp"
        >
        <ve.com.abicelis.chefbuddy.views.FancyTitleTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_edit_spin_wheel_recipes_title"
            custom:default_padding="false"
            />
        <TextView
            android:id="@+id/dialog_edit_wheel_recipes_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_edit_spin_wheel_recipes_subtitle"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dialog_edit_wheel_recipes_recycler"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        >
        <Button
            android:id="@+id/dialog_edit_wheel_recipes_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_set"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            style="?attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/dialog_edit_wheel_recipes_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/dialog_edit_wheel_recipes_set"
            android:layout_toLeftOf="@id/dialog_edit_wheel_recipes_set"
            android:text="@string/dialog_cancel"
            style="?attr/borderlessButtonStyle"/>
    </RelativeLayout>


</LinearLayout>