<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ui.addEditRecipe.AddEditRecipeActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_backup_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ToolbarTheme"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/gray_background"
        >



        <LinearLayout
            android:id="@+id/activity_backup_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:focusableInTouchMode="true"
            >




            <!-- LAST BACKUP -->
            <ve.com.abicelis.chefbuddy.views.FancyTitleTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_backup_title_last_backup"
                />
            <ve.com.abicelis.chefbuddy.views.FancyCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--LOADING STATE-->
                    <ProgressBar
                        android:id="@+id/activity_backup_last_backup_loading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        style="@style/Base.Widget.AppCompat.ProgressBar"
                        android:visibility="visible"
                        />

                    <!--SHOW_BACKUP_INFO STATE-->
                    <LinearLayout
                        android:id="@+id/activity_backup_last_backup_info_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:visibility="gone"
                        >

                        <TextView
                            android:id="@+id/activity_backup_last_backup_info_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/backup_info_detail_string"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/activity_backup_last_backup_info_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/backup_info_detail_string_2"
                            android:textSize="16sp"
                            />

                        <TextView
                            android:id="@+id/activity_backup_last_backup_info_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/backup_info_detail_string_3"
                            android:textSize="16sp"
                            />

                    </LinearLayout>

                    <!--NO_BACKUPS STATE-->
                    <TextView
                        android:id="@+id/activity_backup_last_backup_no_backups"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_backup_no_backups_found"
                        android:textSize="16sp"
                        android:visibility="gone"
                        />

                    <!--BACKING_UP STATE-->
                    <LinearLayout
                        android:id="@+id/activity_backup_last_backup_backing_up_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:visibility="gone"
                        >
                        <TextView
                            android:id="@+id/activity_backup_last_backup_backing_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_backup_backing_up"
                            android:textSize="16sp"
                            />

                        <ProgressBar
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:indeterminate="true"
                            android:layout_marginTop="8dp"
                            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                            />
                    </LinearLayout>
                </FrameLayout>
            </ve.com.abicelis.chefbuddy.views.FancyCardView>




            <!-- GENERAL -->
            <ve.com.abicelis.chefbuddy.views.FancyTitleTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_backup_title_general"
                />
            <ve.com.abicelis.chefbuddy.views.FancyCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:id="@+id/activity_backup_backup_frequency_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_backup_backup_frequency_title"
                        android:textSize="18sp"
                        android:textColor="@color/primary_text"
                        />

                    <TextView
                        android:id="@+id/activity_backup_backup_frequency_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textSize="14sp"
                        android:textColor="@color/secondary_text"
                        />
                </LinearLayout>

            </ve.com.abicelis.chefbuddy.views.FancyCardView>



            <!-- GOOGLE DRIVE -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ve.com.abicelis.chefbuddy.views.FancyTitleTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_backup_title_google_drive"
                    />
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/activity_backup_google_drive_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"/>
            </LinearLayout>
            <ve.com.abicelis.chefbuddy.views.FancyCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--LOADING STATE-->
                    <ProgressBar
                        android:id="@+id/activity_backup_google_drive_loading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        style="@style/Base.Widget.AppCompat.ProgressBar"
                        android:visibility="visible"
                        />

                    <!--DISABLED STATE-->
                    <TextView
                        android:id="@+id/activity_backup_google_drive_disabled"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_backup_google_drive_disabled"
                        android:textColor="@color/hint_text"
                        android:textSize="16sp"
                        android:visibility="gone"
                        />

                    <!--ENABLED STATE-->
                    <LinearLayout
                        android:id="@+id/activity_backup_google_drive_enabled_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        >

                        <LinearLayout
                            android:id="@+id/activity_backup_google_drive_enabled_account_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/activity_backup_account_title"
                                android:textSize="18sp"
                                android:textColor="@color/primary_text"
                                />

                            <TextView
                                android:id="@+id/activity_backup_google_drive_enabled_account_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:textSize="14sp"
                                android:textColor="@color/secondary_text"
                                />
                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/activity_backup_google_drive_enabled_backup_connection_type_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/activity_backup_backup_over_title"
                                android:textSize="18sp"
                                android:textColor="@color/primary_text"
                                />

                            <TextView
                                android:id="@+id/activity_backup_google_drive_enabled_backup_connection_type_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:textSize="14sp"
                                android:textColor="@color/secondary_text"
                                />
                        </LinearLayout>
                    </LinearLayout>



                </FrameLayout>

            </ve.com.abicelis.chefbuddy.views.FancyCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/hint_text"
                android:textSize="14sp"
                android:text="@string/activity_backup_restore_data_explanation"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>